--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="https://suburl.v1.mk/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>肥羊直播/点播工具集合</title>
+    <title>直播/点播工具集合</title>
   </head>
   <body>
     <div id="app"></div>
